--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
       <artifactId>spring-jdbc</artifactId>
       <version>4.3.9.RELEASE</version>
     </dependency>
+ <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+      <version>4.3.9.RELEASE</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>SpringSecurity01</finalName>
